--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         </p>
     </section>
     <section class="chart">
+        <section class="legend">
+            <h2>legenda</h2>
+        </section>
         <section class="area">
             <h2>výměra [%]</h2>
         </section>
