Implement ETL process

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script defer src="js/search.js"></script>
     <script defer src="js/info.js"></script>
     <script defer src="js/mapper.js"></script>
+    <script async src="data/data.js" onload="Monitor.init()"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css">
