--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>parcely [%]</h2>
         </section>
         <section class="parcel-avg-area">
-            <h2>průměrná výměra parcely [ha]</h2>
+            <h2>průměrná výměra parcely [m<sup>2</sup>]</h2>
         </section>
     </section>
 </body>
