--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title></title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script defer src="js/index.js"></script>
+    <script defer src="js/mapper.js"></script>
     <script defer src="js/data.js"></script>
     <script defer src="js/dashboard.js"></script>
+    <script defer src="js/dashboard.chart.js"></script>
     <script defer src="js/search.js"></script>
     <script defer src="js/info.js"></script>
-    <script defer src="js/mapper.js"></script>
     <script async src="data/data.js" onload="Monitor.init()"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet">
@@ -20,6 +21,8 @@
         <h1>Katastrální území</h1>
         <div class="cadastre-search">
             <input type="text" id="cadastre-area" placeholder="jméno nebo kód" autofocus>
+        </div>
+        <div class="cadastre-date">
         </div>
     </section>
     <section class="info">
@@ -39,6 +42,14 @@
         </section>
         <section class="parcel-avg-area">
             <h2>průměrná výměra parcely [m<sup>2</sup>]</h2>
+        </section>
+    </section>
+    <section class="line-chart">
+        <section class="line-chart-header">
+            <!-- <h2>vývoj v období</h2> -->
+        </section>
+        <section class="line-chart-plot">
+
         </section>
     </section>
 </body>
