Show similar cadastres

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="js/data.js"></script>
     <script defer src="js/dashboard.js"></script>
     <script defer src="js/dashboard.chart.js"></script>
+    <script defer src="js/dashboard.similar.js"></script>
     <script defer src="js/search.js"></script>
     <script defer src="js/info.js"></script>
     <script async src="data/data.js" onload="Monitor.init()"></script>
@@ -44,12 +45,13 @@
             <h2>průměrná výměra parcely [m<sup>2</sup>]</h2>
         </section>
     </section>
+    <section class="similar-cadastres">
+        <h2>podobná katastrální území</h2>
+    </section>
     <section class="line-chart">
         <section class="line-chart-header">
-            <!-- <h2>vývoj v období</h2> -->
         </section>
         <section class="line-chart-plot">
-
         </section>
     </section>
 </body>
