--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title></title>
     <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
     <script defer src="js/index.js"></script>
     <script defer src="js/mapper.js"></script>
     <script defer src="js/data.js"></script>
+    <script defer src="js/data.indexeddb.js"></script>
     <script defer src="js/dashboard.js"></script>
     <script defer src="js/dashboard.chart.js"></script>
     <script defer src="js/dashboard.similar.js"></script>
     <script defer src="js/search.js"></script>
     <script defer src="js/info.js"></script>
-    <script async src="data/data.js" onload="Monitor.init()"></script>
+    <script defer src="js/init.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/index.css">
