--- a/index.html
+++ b/index.html
@@ -1,60 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8">
-    <title></title>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
-    <script src="https://unpkg.com/dexie@latest/dist/dexie.js"></script>
-    <script defer src="js/index.js"></script>
-    <script defer src="js/mapper.js"></script>
-    <script defer src="js/data.js"></script>
-    <script defer src="js/data.indexeddb.js"></script>
-    <script defer src="js/dashboard.js"></script>
-    <script defer src="js/dashboard.chart.js"></script>
-    <script defer src="js/dashboard.similar.js"></script>
-    <script defer src="js/search.js"></script>
-    <script defer src="js/info.js"></script>
-    <script defer src="js/init.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-</head>
-<body>
-    <section class="header">
-        <h1>Katastrální území</h1>
-        <div class="cadastre-search">
-            <input type="text" id="cadastre-area" placeholder="jméno nebo kód" autofocus>
-        </div>
-        <div class="cadastre-date">
-        </div>
-    </section>
-    <section class="info">
-        <p>
-            <small></small>
-        </p>
-    </section>
-    <section class="chart">
-        <section class="legend">
-            <h2>legenda</h2>
-        </section>
-        <section class="area">
-            <h2>výměra [%]</h2>
-        </section>
-        <section class="parcel">
-            <h2>parcely [%]</h2>
-        </section>
-        <section class="parcel-avg-area">
-            <h2>průměrná výměra parcely [m<sup>2</sup>]</h2>
-        </section>
-    </section>
-    <section class="similar-cadastres">
-        <h2>podobná katastrální území</h2>
-    </section>
-    <section class="line-chart">
-        <section class="line-chart-header">
-        </section>
-        <section class="line-chart-plot">
-        </section>
-    </section>
-</body>
+    <title>kn-landuse-monitor-vue</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
